<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.com.example.suman.intelligentsurveymanagement.fragments.SiteInformationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:text="@string/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/edt_date_time"
                android:hint="30/06/2018 07:45 PM"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:textSize="16dp"
                android:paddingLeft="12dp"
                android:padding="12dp"/>

            <TextView
                android:text="@string/inspector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/edt_inspector"
                android:hint="Rohan Josh"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:paddingLeft="12dp"
                android:padding="12dp"/>

            <TextView
                android:text="@string/client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/edt_client_name"
                android:hint="Xaviers Mathew"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:paddingLeft="12dp"
                android:padding="12dp"/>

            <TextView
                android:text="@string/job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/edt_job"
                android:hint="Mintainance of Buildings and Institution"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/edt_description"
                android:hint="@string/edt_description"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txt_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"/>

            <TextView
                android:id="@+id/txt_lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>